--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -2,3 +2,12 @@ h1, h2{
 	border-bottom:1px solid #aaa;
 	margin-bottom:20px;
 }
+
+div.browser table{
+	margin-top:30px;
+	width:100%;
+}
+div.browser table tr td{
+	width:20%;
+	text-align:center;
+}
